<resources>
    <!-- App name label-->
    <string name="app_name">Inventory App</string>

    <!-- Edit Activity Title-->
    <string name="editor_activity">Add a new Book</string>

    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert dummy data</string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete all entries</string>

    <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier Info</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_name">Book Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_price">Price</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=9] -->
    <string name="hint_quantity">Quantity</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Supplier Name</string>

    <!-- Text hint for supplier tel field in the editor [CHAR LIMIT=9] -->
    <string name="hint_supplier_tel">Supplier Telephone</string>
    <!--
        <string name="tel_not_available">Phone not available</string>
    -->
    <string name="empty_view_title_text">Inventory is empty…</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="editor_insert_product_failed">Error with inserting product</string>
    <string name="editor_insert_product_successful">Product Inserted</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_update_product_successful">Product Updated</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>

    !-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="editor_activity_title_new_product">Add a product</string>
    <string name="editor_activity_title_edit_product">Edit product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="product_name_required">Product name required</string>
    <string name="product_price_required">Product price required</string>
    <string name="product_supplier_name_required">Supplier name required</string>
    <string name="product_supplier_tel_required">Supplier Tel required</string>
    <string name="product_quantity_positive">Quantity must be zero or positive</string>
    <string name="edit_hint_box">Press save button after modifying the Product</string>
    <string name="edit_hint_box_buttons">Buttons just modify the fields,not saving in database</string>
    <string name="add_quantity">Quantity +1</string>
    <string name="remove_quantity">Quantity -1</string>
    <string name="order">Order</string>


</resources>
